--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 </main>
   </div>
 
+  <!-- remove it when using in production -->
+  <a class="flex items-center justify-center gap-2 fixed bottom-4 right-4 bg-black px-4 py-1 rounded-full text-white font-medium text-xs" href="https://github.com/manmeet-ms/motion-slider-demo-2">
+    <svg class="inline-flex w-3 items-center mt-0.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
+    Source here</a>
   <footer class="text-gray-600 body-font">
     <div
       class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
